add text and aria labels

--- a/horaires.html
+++ b/horaires.html
@@ -61,9 +61,23 @@
 
           <div id="navbar-mobile--menu">
             <ul>
-              <li><a href="horaires.html">Horaires - Films à l'affiche</a></li>
-              <li><a href="lecinema.html">Le cinéma</a></li>
-              <li><a href="infospratiques.html">Infos pratiques</a></li>
+              <li>
+                <a aria-label="Lien pour la page horaire" href="horaires.html"
+                  >Horaires - Films à l'affiche</a
+                >
+              </li>
+              <li>
+                <a aria-label="Lien pour la page cinéma" href="lecinema.html"
+                  >Le cinéma</a
+                >
+              </li>
+              <li>
+                <a
+                  aria-label="lien pour la page infos pratiques"
+                  href="infospratiques.html"
+                  >Infos pratiques</a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -72,6 +86,7 @@
         class="header--banner"
         src="img/theater_banner.webp"
         alt="Voici la bannière du Cinéma Neon Dynasty"
+        aria-label="bannière du site internet"
       />
     </header>
     <main>
@@ -89,7 +104,7 @@
       <!-- movie cards  -->
       <section class="fiches">
         <div class="container">
-          <h1 class="fiches--title">Programmation</h1>
+          <h1 class="fiches--title">Programmation du 15 au 17 juin 2025</h1>
         </div>
       </section>
     </main>
