--- a/index.html
+++ b/index.html
@@ -63,9 +63,23 @@
 
           <div id="navbar-mobile--menu">
             <ul>
-              <li><a href="horaires.html">Horaires - Films à l'affiche</a></li>
-              <li><a href="lecinema.html">Le cinéma</a></li>
-              <li><a href="infospratiques.html">Infos pratiques</a></li>
+              <li>
+                <a aria-label="Lien pour la page horaire" href="horaires.html"
+                  >Horaires - Films à l'affiche</a
+                >
+              </li>
+              <li>
+                <a aria-label="Lien pour la page cinéma" href="lecinema.html"
+                  >Le cinéma</a
+                >
+              </li>
+              <li>
+                <a
+                  aria-label="lien pour la page infos pratiques"
+                  href="infospratiques.html"
+                  >Infos pratiques</a
+                >
+              </li>
             </ul>
           </div>
         </div>
