--- a/infospratiques.html
+++ b/infospratiques.html
@@ -59,9 +59,23 @@
 
           <div id="navbar-mobile--menu">
             <ul>
-              <li><a href="horaires.html">Horaires - Films à l'affiche</a></li>
-              <li><a href="lecinema.html">Le cinéma</a></li>
-              <li><a href="infospratiques.html">Infos pratiques</a></li>
+              <li>
+                <a aria-label="Lien pour la page horaire" href="horaires.html"
+                  >Horaires - Films à l'affiche</a
+                >
+              </li>
+              <li>
+                <a aria-label="Lien pour la page cinéma" href="lecinema.html"
+                  >Le cinéma</a
+                >
+              </li>
+              <li>
+                <a
+                  aria-label="lien pour la page infos pratiques"
+                  href="infospratiques.html"
+                  >Infos pratiques</a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -70,19 +84,25 @@
         class="header--banner"
         src="img/theater_banner.webp"
         alt="Voici la bannière du Cinéma Neon Dynasty"
+        aria-label="bannière du site internet"
       />
     </header>
     <main>
       <div class="container">
         <h1>Infos Pratiques</h1>
-        <div><h2>Nos salles</h2></div>
+        <h2>Nos salles</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
-          cupiditate soluta, exercitationem unde molestias, dignissimos, eaque
-          autem voluptatem repudiandae numquam dolorem fugiat placeat sint
-          ipsam! Voluptatem nihil sunt cupiditate libero.
+          Entrez dans un univers où le cinéma rencontre la ville du futur.
+          Baignées de lumières néon et d’ambiances inspirées des ruelles
+          japonaises, nos salles vous plongent dans une atmosphère unique avant
+          même le début de la projection. Confortablement climatisées, elles
+          offrent des fauteuils spacieux et la meilleure technologie sonore et
+          visuelle pour transformer chaque séance en une expérience immersive,
+          comme un voyage à travers un Tokyo futuriste. Installez-vous,
+          laissez-vous envelopper par les couleurs et vibrez au rythme des
+          images.
         </p>
-        <div><h2>Tarifs</h2></div>
+        <h2>Tarifs</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
           officia deserunt ipsa esse quos soluta ut culpa debitis reiciendis
@@ -91,10 +111,33 @@
         </p>
         <h2>Accessibilité</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad
-          atque animi, nihil tempore itaque sapiente laboriosam reiciendis
-          natus, expedita, eos iure omnis quia. Sint repudiandae officia dolore
-          cumque soluta?
+          Notre cinéma est conçu pour accueillir tous les spectateurs dans les
+          meilleures conditions.
+        </p>
+        <br />
+        <ul>
+          <li>
+            Accès PMR : toutes nos salles sont accessibles aux personnes à
+            mobilité réduite, avec des espaces réservés pour fauteuils roulants.
+          </li>
+          <li>
+            Aides auditives : certaines projections sont équipées de dispositifs
+            adaptés pour les personnes malentendantes.
+          </li>
+          <li>
+            Séances adaptées : nous proposons régulièrement des séances avec
+            sous-titrage et audiodescription.
+          </li>
+          <li>
+            Confort : sanitaires adaptés et circulation facilitée dans
+            l’ensemble du cinéma.
+          </li>
+        </ul>
+        <br />
+        <p>
+          Parce que le cinéma doit être une expérience partagée par tous, nous
+          mettons tout en œuvre pour garantir confort, sécurité et immersion à
+          chaque spectateur.
         </p>
       </div>
     </main>
