--- a/lecinema.html
+++ b/lecinema.html
@@ -59,9 +59,23 @@
 
           <div id="navbar-mobile--menu">
             <ul>
-              <li><a href="horaires.html">Horaires - Films à l'affiche</a></li>
-              <li><a href="lecinema.html">Le cinéma</a></li>
-              <li><a href="infospratiques.html">Infos pratiques</a></li>
+              <li>
+                <a aria-label="Lien pour la page horaire" href="horaires.html"
+                  >Horaires - Films à l'affiche</a
+                >
+              </li>
+              <li>
+                <a aria-label="Lien pour la page cinéma" href="lecinema.html"
+                  >Le cinéma</a
+                >
+              </li>
+              <li>
+                <a
+                  aria-label="lien pour la page infos pratiques"
+                  href="infospratiques.html"
+                  >Infos pratiques</a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -79,19 +93,71 @@
       <div class="container">
         <h1>Le cinéma</h1>
         <h2 class="semi-bold">Accueil et services</h2>
+        <br />
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,
-          molestiae at maiores voluptates eaque incidunt nemo! Alias, asperiores
-          labore. Vitae dicta voluptatum deserunt impedit sapiente commodi
-          quaerat quasi, eius illo.
+          Dès que vous franchissez les portes, vous quittez la ville réelle pour
+          plonger dans une atmosphère cyberpunk où les néons, les écrans et les
+          parfums de popcorn composent le décor.
         </p>
+        <br />
+        <ul>
+          <li>
+            Snacking & boissons : stands lumineux aux couleurs changeantes, où
+            le popcorn croustillant, les confiseries et les boissons fraîches
+            deviennent vos compagnons de voyage.
+          </li>
+          <li>
+            Espace détente : installez-vous sous l’éclat des néons, dans un
+            lounge futuriste inspiré des cafés tokyoïtes, parfait pour patienter
+            ou prolonger l’expérience après le film.
+          </li>
+          <li>
+            Billetterie rapide : bornes digitales et guichets éclairés
+            facilitent l’achat ou le retrait de vos places en un instant.
+          </li>
+          <li>
+            Ambiance unique : climatisation, fauteuils design et décors
+            immersifs transforment l’attente en une véritable expérience
+            sensorielle.
+          </li>
+        </ul>
+        <br />
+        <p>
+          Ici, chaque détail est pensé pour que votre voyage commence bien avant
+          que les lumières de la salle ne s’éteignent.
+        </p>
+        <br />
+
         <h2>Accès</h2>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident
-          veniam nihil itaque pariatur, aliquam molestiae deserunt, cum eum
-          reprehenderit reiciendis debitis quaerat adipisci alias et! Quasi
-          nobis itaque aut dolores.
+          Rejoindre notre cinéma est simple et pratique, que vous veniez en
+          voiture ou en transports en commun.
         </p>
+        <br />
+        <ul>
+          <li>
+            Parking : un parking gratuit est disponible à proximité immédiate du
+            cinéma.
+          </li>
+          <li>
+            Transports en commun : bus et tram desservent l’arrêt [Nom de
+            l’arrêt] à seulement quelques minutes à pied.
+          </li>
+          <li>
+            Mobilité douce : des arceaux à vélos sont installés devant l’entrée
+            pour votre confort.
+          </li>
+          <li>
+            À pied : situé en plein cœur de [nom du quartier / de la ville],
+            notre cinéma est facilement accessible à pied.
+          </li>
+        </ul>
+        <br />
+        <p>
+          Entrez sans effort dans notre univers lumineux et profitez d’une
+          expérience cinéma unique, dès votre arrivée.
+        </p>
+        <br />
 
         <h2>Nous contacter</h2>
         <p>
